# minity-rs

./: Cargo.toml  LICENSE  README.md  square.mtl
shader_src/: light.wgsl  model.wgsl  ray_tracer.wgsl
src/: array_vec.rs  graphics.rs  main.rs  objects.rs  renderer.rs  window.rs
src/graphics/: bind_group.rs  renderer_impls.rs
