[package]
name = "minity-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.0"
egui = "0.15.0"
egui_winit_platform = "0.12.0"
egui_wgpu_backend = "0.14.0"
wgpu = "0.11.1"
wgpu-core = "0.11.3"
cgmath = "0.18.0"
env_logger = "0.9.0"
log = "0.4.14"
pollster = "0.2.4"
native-dialog = { version = "0.6.1", features = ["windows_dpi_awareness", "windows_visual_styles"] }
image = "0.23.14"
tuple_list = "0.1.3"
itertools = "0.10.3"
bytemuck = { version = "1.7.2", features = ["derive"] }
bitflags = "1.3.2"
tobj = "3.2.0"
